<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_settings_size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_settings"
    tools:context=".ui.TextSize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/back_button_about"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_size_info"
                android:layout_marginTop="33dp"
                android:layout_marginStart="6dp"
                android:text="@string/text_size_nor"
                android:textSize="24sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/use_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical"
                android:padding="18dp">

                <TextView
                    android:id="@+id/use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/text_size_title_nor"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/use_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/text_size_info_nor"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:id="@+id/night_card"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/night"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_card"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/night_mode_nor"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Switch
                    android:id="@+id/switch1"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <Button
                android:id="@+id/increase"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@color/white"
                android:text="@string/increase_nor"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/reset"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:backgroundTint="@color/white"
                android:text="@string/reset_nor"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>