<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_settings"
    tools:context=".ui.Settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/settings_text"
                android:layout_marginTop="35dp"
                android:layout_marginStart="6dp"
                android:text="@string/settings_nor"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/settings_name"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_below="@+id/settings_text"
                android:text="@string/welcome_nor"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <GridLayout
            android:columnCount="1"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:layout_marginTop="12dp">

                <LinearLayout
                    android:id="@+id/night_mode_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/night"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/night_mode_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@string/night_mode_nor"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Switch
                        android:id="@+id/night_mode"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/clearCache_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/clear"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/cache_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@string/cache_nor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/temperature_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/temperature"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/temp_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@string/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Switch
                        android:id="@+id/temperature_switch"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/text_size"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/textsize"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/text_size_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@string/text_size_nor"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/language_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/language"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Switch
                        android:id="@+id/language_switch"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/info_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/info"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/info_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@string/info_nor"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notification_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:id="@+id/notifications_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/notification"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/notifications_text"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:text="@string/not_nor"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/notifications"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>
